--- a/Log.html
+++ b/Log.html
@@ -3,10 +3,10 @@
 	<head>
 		<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" /> 
-		<link rel="apple-touch-icon" href="./favicon.ico" />
-		<script src="./js/targetblank.js"></script>
-		<!--[if lte IE 9]><script src="./select/selectivizr.js"></script><![endif]-->
+		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" /> 
+		<link rel="apple-touch-icon" href="favicon.ico" />
+		<script src="js/targetblank.js"></script>
+		<!--[if lte IE 9]><script src="select/selectivizr.js"></script><![endif]-->
 		<title>
 			Website Log
 		</title>
@@ -16,12 +16,12 @@
 				background: #000000;
 				font-family: Georgia, Arial, Century Gothic, MS Pmincho, SimSun, MS Mincho;
 				}
-			iframe .earth {
+			iframe#earth {
 			overflow:auto;
 			width:542px;
 			height:542px;
 			}
-			iframe .h5logo
+			iframe#h5logo
 			{
 			overflow:auto;
 			width:512px;
@@ -31,7 +31,7 @@
 	</head>
 	<body>
 		<p>
-			<a href="./index.html" style="text-decoration:none;font-size:30px;color:#FFFF00;text-shadow: 5px 4px 6px #0000FF;">
+			<a href="index.html" style="text-decoration:none;font-size:30px;color:#FFFF00;text-shadow: 5px 4px 6px #0000FF;">
 				<b>
 					HOMEPAGE
 				</b>
@@ -41,8 +41,8 @@
 				Website History
 		</p>
 		<br />
-		<iframe id="h5logo" src="https://www.w3.org/html/logo/downloads/HTML5_Logo.svg"></iframe><p></p>
-		<iframe id="earth" src="./svg/earthasia.svg"></iframe>
+		<iframe id="h5logo" src="svg/h5logo.svg"></iframe><p></p>
+		<iframe id="earth" src="svg/earthasia.svg"></iframe>
 		<br />
 
 		<br />
