--- a/Log.html
+++ b/Log.html
@@ -47,7 +47,7 @@
 
 		<br />
 		<p>
-			Last Updated On 2018-01-29 (YYYY/MM/DD):<br />"I've learnt JavaScript! I've improved my JavaScript! I've improved my JavaScript again!"
+			Last Updated On 2018-02-01 (YYYY/MM/DD):<br />HTML 5
 			<br /><br /><br />
 		</p>
 		<h1>
@@ -402,6 +402,8 @@
 		<p>01/25<br />index javascript test<br />calc added<br /><br /><br /></p>
 		<p>01/26<br />index javascript modified<br />log site-wide pure https offered<br />log code simplified<br /><br /></p>
 		<p>01/29<br />index javascript modified<br /><br /><br /></p>
+		<p>01/31<br />Log HTML5 passed<br />HTML 5 logo svg added<br /><br /><br /></p>
+		<p>02/01<br />sync<br /><br /><br /></p>
 		<p><br /><br /><br /><br /><br /><br /></p>
 		<p>
 			<a rel="external" style="text-decoration:none" href="https://jigsaw.w3.org/css-validator/check/referer">
