--- a/Log.html
+++ b/Log.html
@@ -402,8 +402,8 @@
 		<p>01/25<br />index javascript test<br />calc added<br /><br /><br /></p>
 		<p>01/26<br />index javascript modified<br />log site-wide pure https offered<br />log code simplified<br /><br /></p>
 		<p>01/29<br />index javascript modified<br /><br /><br /></p>
-		<p>01/31<br />Log HTML5 passed<br />HTML 5 logo svg added<br /><br /><br /></p>
-		<p>02/01<br />sync<br /><br /><br /></p>
+		<p>01/31<br />Log HTML5 passed<br />HTML 5 logo svg added, source changed from w3c to local and modified<br /><br /><br /></p>
+		<p>02/01<br />sync GitHub<br /><br /><br /></p>
 		<p><br /><br /><br /><br /><br /><br /></p>
 		<p>
 			<a rel="external" style="text-decoration:none" href="https://jigsaw.w3.org/css-validator/check/referer">
