--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 			document.write("OS: " + navigator.appVersion);
 </script><p></p><script type="text/javascript">
 			document.write("OS Platform: " + navigator.platform);
-</script><p></p>
+</script><p></p><p></p>
 		<p id="copyright-white">
 				Copyright &copy; 2018 Yaoze Ye
 		</p>
