--- a/grid-effect/index.html
+++ b/grid-effect/index.html
@@ -10,6 +10,7 @@
 		<link rel="stylesheet" type="text/css" href="css/normalize.css" />
 		<link rel="stylesheet" type="text/css" href="css/demo.css" />
 		<link rel="stylesheet" type="text/css" href="css/component.css" />
+		<!--[if lte IE 9]><script type="text/javascript" src="../select/selectivizr.js"></script><![endif]-->
 		<style>
 			.codrops-header {
 				margin-top: 60px;
