--- a/grid-effect/index2.html
+++ b/grid-effect/index2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="zh-cn" class="no-js">
+<html lang="en-us" class="no-js">
 	<head>
-		<meta charset="UTF-8" />
+		<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge"> 
 		<meta name="viewport" content="width=device-width, initial-scale=1"> 
 		<title>3D Grid Effect | Demo 1</title>
@@ -10,6 +10,7 @@
 		<link rel="stylesheet" type="text/css" href="css/normalize.css" />
 		<link rel="stylesheet" type="text/css" href="css/demo.css" />
 		<link rel="stylesheet" type="text/css" href="css/component.css" />
+		<!--[if lte IE 9]><script type="text/javascript" src="../select/selectivizr.js"></script><![endif]-->
 		<style>
 			.codrops-header {
 				margin-top: 60px;
@@ -99,7 +100,6 @@
 					<span class="icon close-content"></span>
 				</div>
 			</section>
-		</div><!-- /container -->
 		<div class="footer-banner" style="width:728px; margin:0 auto 30px"></div>
 		<script src="js/classie.js"></script>
 		<script src="js/helper.js"></script>
