--- a/number-progress/index.html
+++ b/number-progress/index.html
@@ -2,15 +2,15 @@
 <html lang="en-us">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>NumberProgressBar</title>
-		<link rel="shortcut icon" href="../../favicon.ico" type="image/x-icon" /> 
-		<link rel="apple-touch-icon" href="../../favicon.ico" />
-  <link rel="stylesheet" type="text/css" href="assets/normalize.css">
-  <link rel="stylesheet" type="text/css" href="assets/style.css">
-  <link rel="stylesheet" type="text/css" href="assets/number-pb.css">
-		<script type="text/javascript" src="../../js/targetblank.js"></script>
-		<!--[if lte IE 9]><script type="text/javascript" src="../../select/selectivizr.js"></script><![endif]-->
+		<link rel="shortcut icon" href="../favicon.ico" type="image/x-icon" /> 
+		<link rel="apple-touch-icon" href="../favicon.ico" />
+  <link rel="stylesheet" type="text/css" href="assets/normalize.css" />
+  <link rel="stylesheet" type="text/css" href="assets/style.css" />
+  <link rel="stylesheet" type="text/css" href="assets/number-pb.css" />
+		<script type="text/javascript" src="../js/targetblank.js"></script>
+		<!--[if lte IE 9]><script type="text/javascript" src="../select/selectivizr.js"></script><![endif]-->
   <style>
   body {
   	font-family: Verdana, Arial, Helvetica, Sans-serif;
