--- a/page-transitions/index.html
+++ b/page-transitions/index.html
@@ -14,6 +14,7 @@
 		<link rel="stylesheet" type="text/css" href="css/component.css" />
 		<link rel="stylesheet" type="text/css" href="css/animations.css" />
 		<script src="js/modernizr.custom.js"></script>
+		<!--[if lte IE 9]><script type="text/javascript" src="../select/selectivizr.js"></script><![endif]-->
 	</head>
 	<body>	
 		<div class="pt-triggers">
