--- a/Log.html
+++ b/Log.html
@@ -7,394 +7,38 @@
 		<link rel="apple-touch-icon" href="favicon.ico" />
 		<script src="js/targetblank.js"></script>
 		<!--[if lte IE 9]><script src="select/selectivizr.js"></script><![endif]-->
-		<title>
-			Website Log
-		</title>
+		<title>Website Log</title>
 		<style>
-			body {
-				color: #FFFFFF;
-				background: #000000;
-				font-family: Georgia, Arial, Century Gothic, MS Pmincho, SimSun, MS Mincho;
-				}
-			iframe#earth {
-			overflow:auto;
-			width:542px;
-			height:542px;
-			}
-			iframe#h5logo
-			{
-			overflow:auto;
-			width:512px;
-			height:512px;
-			}
+body { color: #FFFFFF; background: #000000; font-family: Georgia, Arial, Century Gothic, MS Pmincho, SimSun, MS Mincho; }
+iframe#earth { overflow:auto; width:542px; height:542px; }
+iframe#h5logo {overflow:auto; width:512px; height:512px; }
 		</style>
 	</head>
-	<body>
-		<p>
-			<a href="index.html" style="text-decoration:none;font-size:30px;color:#FFFF00;text-shadow: 5px 4px 6px #0000FF;">
-				<b>
-					HOMEPAGE
-				</b>
-			</a>
-		</p>
-		<p style="font-size:40px;color:white;text-shadow: 1px 15px 45px #FFFFFF;">
-				Website History
-		</p>
-		<br />
+	<body><p><a href="index.html" style="text-decoration:none;font-size:30px;color:#FFFF00;text-shadow: 5px 4px 6px #0000FF;"><b>HOMEPAGE</b></a></p>
+		<p style="font-size:40px;color:white;text-shadow: 1px 15px 45px #FFFFFF;">Website History</p><p></p>
 		<iframe id="h5logo" src="svg/h5logo.svg"></iframe><p></p>
-		<iframe id="earth" src="svg/earthasia.svg"></iframe>
-		<br />
-
-		<br />
-		<p>
-			Last Updated On 2018-02-01 (YYYY/MM/DD):<br />HTML 5
-			<br /><br /><br />
-		</p>
-		<h1>
-			2017
-		</h1>
-		<p> 
-		<br />
-			10/04-10/05 (MM/DD)
-			<br />
-			The first mod of this site.
-			<br />
-			with	"
-				<br />YaozeYE Personal Page
-				<br />crazy-tentacles(HTML5) 
-				<br />page-preloading1(HTML5) 
-				<br />page-preloading2(HTML5) 
-				<br />ball-pool(HTML5) 
-				<br />textillate(HTML5) 
-				<br />shine(HTML5) 
-				<br />HTML_color 
-				<br />
-				<br />GitHub 
-				<br />Twitter 
-				<br />Tencent QQ 
-				<br />Email  
-				<br />
-				"
-				<br />
-				<br />
-				<br />
-		</p>
-		<p>
-			10/06
-			<br />
-			Add	"
-				<br />Bubbles(Javascript) 
-				<br />loading(HTML5) 
-				<br />snake(HTML5)
-				<br />
-				"
-				<br />
-			Change Github image
-			<br />
-			from
-			<br />
-			420x420px (Internet github.com)
-			<br />
-			to 
-			<br />
-			200x200px (local)
-			<br />
-			<br />
-			separate the loading canvas of Homepage
-			<br />
-			to
-			<br />
-			loading(HTML5)
-			<br />
-			<br />
-			<br />
-		</p>
-		<p>
-			10/10
-			<br />
-			Add "
-				<br />Music
-				<br />'including one song by flash and five songs by iframe'
-				<br />
-				"
-				<br />
-				<br />
-		</p>
-		<p>
-			10/13
-			<br />
-			Add link to "Email" (mail.qq.com)
-			<br />
-			<br />
-			<br />
-		</p>
-		<p>
-			10/22
-			<br />
-			Concept Revised
-			<br />
-			<br />
-			<br />
-		</p>
-		<p>
-			10/29
-			<br />
-			Halloween Theme
-			<br />
-			<br />
-			<br />
-		</p>
-		<p>
-			10/30
-			<br />
-			iisstart image changed
-			<br />
-			github image removed
-			<br />
-			file name and link changed ( Website.html to index.html )
-			<br />
-			index improved
-			<br />
-			index text-align added
-			<br />
-			<br />
-			<br />
-		</p>
-		<p>11/06
-			<br />
-			Halloween Theme removed
-			<br />
-			November added
-			<br />
-			<br />
-			<br />
-		</p>
-		<p>11/07
-			<br />
-			index body ::selection improved
-			<br />
-			index background-color changed(from orange to violet(#EE82EE))
-			<br />
-			iisstart image suitable for the new background-color
-			<br />
-			<br />
-			<br />
-		</p>
-		<p>11/08
-			<br />
-			site-wide HTTPS supported
-			<br />
-			external domain *.js removed
-			<br />
-			bubble instruction improved
-			<br />
-			Cache-Control no-siteapp added to all *.html files
-			<br />
-			HTML_color hexadecimal color display name all changed from lowercase to upper-case
-			<br />
-			added keywords to index
-			<br />
-			Demo1 and Demo2 Chinese characters changed to English words
-			<br />
-			Demo series code optimized
-			<br />
-			bubble keywords removed
-			<br />
-			slidetounlock code fixed and improved
-			<br />
-			<br />
-			<br />
-		<p>11/10
-			<br />
-			That's incredible that I have updated the 1111 theme...
-			<br />
-			<br />
-			<br />
-		</p>
-		<p>11/11
-			<br />
-			That's incredible that I have improved the 1111 theme...
-			<br />
-			favicon added
-			<br />
-			keywords removed
-			<br />
-			iisstart image get from Pic Bed ( https://sm.ms/ )
-			<br />
-			1111 theme removed
-			<br />
-			<br />
-			<br />
-		</p>
-		<p>11/12
-			<br />
-			music page "text fixed
-			<br />
-			song and artist names displayed when iframe is invalid
-			<br />
-			6 more songs available
-			<br />
-			previous songs ( iframe only ) have been proved to be inaudible for unknown reasons
-			<br />
-			iframe width adjusted
-			<br />
-			layout adjusted
-			<br />
-			html file grammar revised
-			<br />
-			"
-			<br />
-			<br />
-			<br />
-		</p>
-		<p>11/13
-			<br />
-			music.html notice updated
-			<br />
-			unavailable songs removed
-			<br />
-			<br />
-			<br />
-		</p>
-		<p>11/14
-			<br />
-			1 more song added
-			<br />
-			<br />
-			<br />
-		</p>
-		<p>11/15
-			<br />
-			index code optimized
-			<br />
-			<br />
-			<br />
-		</p>
-		<p>11/16
-			<br />
-			Log.html xhtml strict standard referer removed
-			<br />
-			<br />
-			<br />
-		</p>
-		<p>
-			11/18
-			<br />
-			Log.html svg modified
-			<br />
-			website code optimized
-			<br />
-			index font changed
-			<br />
-			index small-caps added
-			<br />
-			<br />
-			<br />
-		</p>
-		<p>
-			11/19
-			<br />
-			webgl-clouds(html5) added
-			<br />
-			css available now
-			<br />
-			index data unit changed from 'px' to 'em'
-			<br />
-			Today's update may reduce 0.01ms-500ms loading time.
-			<br />
-			music! the first step of 'Weekly Music'
-			<br /><br /><br />
-		</p>
-		<p>11/25<br />Weekly Music Updated ( Nov.26 - Dec.02 )<br /><br /><br /></p>
-		<p>
-			11/27
-			<br />
-			weekly music redirect page optimized
-			<br />
-			<br />
-			<br />
-		</p>
-		<p>
-			11/30
-			<br />
-			index december welcome words added
-			<br />
-			css simplified, index code simplified
-			<br />
-			<br />
-			<br />
-		</p>
-		<p>
-			12/02
-			<br />
-			weekly music updated
-			<br />
-			<br />
-			<br />
-		</p>
-		<p>
-			12/09
-			<br />
-			weekly music updated
-			<br />
-			<br />
-			<br />
-		</p>
-		<p>
-			12/11
-			<br />
-			css simplified
-			<br />
-			<br />
-			<br />
-		</p>
-		<p>
-			12/12
-			<br />
-			css improved
-			<br />
-			site-wide compatibility improved ( for IE browser version below Internet Explorer 10)
-			<br />
-			Log code simplified
-			<br />
-			font revised
-			<br />
-			background color changed from #EE82EE to #4B9EFF
-			<br />
-			<br />
-			<br />
-		</p>
-		<p>
-			12/16
-			<br />
-			weekly music updated
-			<br />
-			partly optimized for w3 standard
-			<br />
-			<br />
-			<br />
-		</p>
-		<p>
-			12/17
-			<br />
-			study content added
-			<br />
-			optimized
-			<br />
-			<br />
-			<br />
-		</p>
-		<p>
-			12/20
-			<br />
-			optimized
-			<br />
-			<br />
-			<br />
-		</p>
+		<iframe id="earth" src="svg/earthasia.svg"></iframe><p></p><p>Last Updated On 2018-02-23 (YYYY-MM-DD):<br />simulations<br /><br /><br /></p>
+		<h1>2017</h1>
+		<p><br />10/04-10/05 (MM/DD)<br />The first mod of this site.<br />with	"<br />YaozeYE Personal Page<br />crazy-tentacles(HTML5) <br />page-preloading1(HTML5) <br />page-preloading2(HTML5) <br />ball-pool(HTML5) <br />textillate(HTML5) <br />shine(HTML5) <br />HTML_color <br /><br />GitHub <br />Twitter <br />Tencent QQ <br />Email  <br />"<br /><br /><br /></p>
+		<p>10/06<br />Add	"<br />Bubbles(Javascript) <br />loading(HTML5) <br />snake(HTML5)<br />"<br />Change Github image<br />from<br />420x420px (Internet github.com)<br />to <br />200x200px (local)<br /><br />separate the loading canvas of Homepage<br />to<br />loading(HTML5)<br /><br /><br /></p>
+		<p>10/10<br />Add "<br />Music<br />'including one song by flash and five songs by iframe'<br />"<br /><br /></p>
+		<p>10/13<br />Add link to "Email" (mail.qq.com)<br /><br /><br /></p>
+		<p>10/22<br />Concept Revised<br /><br /><br /></p>
+		<p>10/29<br />Halloween Theme<br /><br /><br /></p>
+		<p>10/30<br />iisstart image changed<br />github image removed<br />file name and link changed ( Website.html to index.html )<br />index improved<br />index text-align added<br /><br /><br /></p>
+		<p>11/06<br />Halloween Theme removed<br />November added<br /><br /><br /></p>
+		<p>11/07<br />index body ::selection improved<br />index background-color changed(from orange to violet(#EE82EE))<br />iisstart image suitable for the new background-color<br /><br /><br /></p><p>11/08<br />site-wide HTTPS supported<br />external domain *.js removed<br />bubble instruction improved<br />Cache-Control no-siteapp added to all *.html files<br />HTML_color hexadecimal color display name all changed from lowercase to upper-case<br />added keywords to index<br />Demo1 and Demo2 Chinese characters changed to English words<br />Demo series code optimized<br />bubble keywords removed<br />slidetounlock code fixed and improved<br /><br /><br />
+		<p>11/10<br />That's incredible that I have updated the 1111 theme...<br /><br /><br /></p>
+		<p>11/11<br />That's incredible that I have improved the 1111 theme...<br />favicon added<br />keywords removed<br />iisstart image get from Pic Bed ( https://sm.ms/ )<br />1111 theme removed<br /><br /><br /></p>
+		<p>11/12<br />music page "text fixed<br />song and artist names displayed when iframe is invalid<br />6 more songs available<br />previous songs ( iframe only ) have been proved to be inaudible for unknown reasons<br />iframe width adjusted<br />layout adjusted<br />html file grammar revised<br />"<br /><br /><br /></p><p>11/13<br />music.html notice updated<br />unavailable songs removed<br /><br /><br /></p><p>11/14<br />1 more song added<br /><br /><br /></p><p>11/15<br />index code optimized<br /><br /><br /></p><p>11/16<br />Log.html xhtml strict standard referer removed<br /><br /><br /></p>
+		<p>11/18<br />Log.html svg modified<br />website code optimized<br />index font changed<br />index small-caps added<br /><br /><br /></p><p>11/19<br />webgl-clouds(html5) added<br />css available now<br />index data unit changed from 'px' to 'em'<br />Today's update may reduce 0.01ms-500ms loading time.<br />music! the first step of 'Weekly Music'<br /><br /><br /></p><p>11/25<br />Weekly Music Updated ( Nov.26 - Dec.02 )<br /><br /><br /></p><p>11/27<br />weekly music redirect page optimized<br /><br /><br /></p><p>11/30<br />index december welcome words added<br />css simplified, index code simplified<br /><br /><br /></p><p>12/02<br />weekly music updated<br /><br /><br /></p>
+		<p>12/09<br />weekly music updated<br /><br /><br /></p><p>12/11<br />css simplified<br /><br /><br /></p><p>12/12<br />css improved<br />site-wide compatibility improved ( for IE browser version below Internet Explorer 10)<br />Log code simplified<br />font revised<br />background color changed from #EE82EE to #4B9EFF<br /><br /><br /></p>
+		<p>12/16<br />weekly music updated<br />partly optimized for w3 standard<br /><br /><br /></p>
+		<p>12/17<br />study content added<br />optimized<br /><br /><br /></p>
+		<p>12/20<br />optimized<br /><br /><br /></p>
 		<p>12/21<br />index div modified<br />Email button modified<br />css file divided<br />weekly music series grammar standard improved in future<br /><br /><br /></p>
 		<p>12/23<br />weekly music updated<br />partly optimized for w3 standard<br /><br /><br /></p>
-		<p>12/24<br />X'MAS THEME ADDED<br /><br /><br /><br /><br /><br /><br /></p>
+		<p>12/24<br />XMAS THEME ADDED<br /><br /><br /><br /><br /><br /><br /></p>
 		<h1>2018</h1>
 		<p><br />01/06<br />code simplified<br />meta added<br />Safari, Firefox support improved<br /><br /><br /></p>
 		<p>01/07<br />direction revised<br /><br /><br /></p>
@@ -404,19 +48,16 @@
 		<p>01/29<br />index javascript modified<br /><br /><br /></p>
 		<p>01/31<br />Log HTML5 passed<br />HTML 5 logo svg added, source changed from w3c to local and modified<br /><br /><br /></p>
 		<p>02/01<br />sync GitHub<br /><br /><br /></p>
+		<p>02/23<br />sim optimized<br />Log code simplified<br /><br /><br /></p>
 		<p><br /><br /><br /><br /><br /><br /></p>
-		<p>
-			<a rel="external" style="text-decoration:none" href="https://jigsaw.w3.org/css-validator/check/referer">
-				<img style="border:0;width:88px;height:31px"
-					src="https://jigsaw.w3.org/css-validator/images/vcss"
-					alt="Valid CSS!" />
-				<img style="border:0;width:88px;height:31px"
-					src="https://www.w3.org/Icons/valid-svg11"
-					alt="Valid SVG!" />
-			</a>
-		</p>
-		<p>
-			Copyright &copy; 2018 Yaoze Ye
-		</p>	
+<p><a rel="external" style="text-decoration:none" href="https://jigsaw.w3.org/css-validator/check/referer">
+<img style="border:0;width:88px;height:31px"
+	src="https://jigsaw.w3.org/css-validator/images/vcss"
+	alt="Valid CSS!" />
+<img style="border:0;width:88px;height:31px"
+	src="https://www.w3.org/Icons/valid-svg11"
+	alt="Valid SVG!" />
+</a></p>
+		<p>Copyright &copy; 2018 Yaoze Ye</p>	
 	</body>
 </html>
