--- a/index.html
+++ b/index.html
@@ -20,16 +20,22 @@
 		<title>ホーム｜葉-YaozeYE</title>
 	</head>
 	<body>
-		<h1 style="text-shadow: 1px 15px 45px #993300;font-variant:none;"><i><b>YaozeYE Personal Page</b></i></h1><hr />
+		<h1 style="text-shadow: 1px 15px 45px #993300;"><i><b>YaozeYE Personal Page</b></i></h1><hr />
 		<h2 style="font-size:45px;color:white;text-shadow: 3px 12px 80px #FFFFFF;"><i><b>HAPPY NEW YEAR!</b></i></h2>
 		<p><a href="weeklymusic.html" style="text-decoration:none;"><input id="h-caps-red" type="button" value="WeeklyMusic"></input></a><br /></p>
 		<!--Function Link-->
 		<p style="font-size:2em;color:grey;"><i>------Function Module------</i><br /></p>
 		
-		<p><a href="phet/physics/faradays-law_en.html" style="font-size:1.5em;color:#FFFFFF;font-variant:none;" rel="external">Faraday's Law(HTML5)</a><br /></p>
-		<p><a href="phet/physics/capacitor-lab-basics_en.html" style="font-size:1.5em;color:#FFFFFF;font-variant:none;" rel="external">capacitor-lab-basics(HTML5)</a><br /></p>
-		<p><a href="phet/physics/circuit-construction-kit-dc_en.html" style="font-size:1.5em;color:#FFFFFF;font-variant:none;" rel="external">circuit-construction-kit-dc(HTML5)</a><br /></p>
-		<p><a href="phet/physics/circuit-construction-kit-ac_en.jar" style="font-size:1.5em;color:#FFFFFF;font-variant:none;" rel="external">circuit-construction-kit-ac(JAVA)</a><br /></p>
+		<p><a href="grid-effect/index.html" style="font-size:1.5em;color:#3498DB;" rel="external">grid-effect1(HTML5)</a><br /></p>
+		<p><a href="grid-effect/index2.html" style="font-size:1.5em;color:#F24333;" rel="external">grid-effect2(HTML5)</a><br /></p>
+		<p><a href="number-progress/index.html" style="font-size:1.5em;color:#176785;" rel="external">number-progress(HTML5)</a><br /></p>
+		<p><a href="page-transitions/index.html" style="font-size:1.5em;color:rgba(245, 140, 186, 1);" rel="external">page-transitions(HTML5)</a><br /></p>
+		<p><a href="parallax-slider/index.html" style="font-size:1.5em;color:#222;" rel="external">parallax-slider(HTML5)</a><br /></p>	
+		
+		<p><a href="simulation/physics/faradays-law_en/faradays-law_en.html" style="font-size:1.5em;color:#FFFFFF;" rel="external">Faraday's Law(HTML5)</a><br /></p>
+		<p><a href="simulation/physics/capacitor-lab-basics_en/capacitor-lab-basics_en.html" style="font-size:1.5em;color:#FFFFFF;" rel="external">capacitor-lab-basics(HTML5)</a><br /></p>
+		<p><a href="simulation/physics/circuit-construction-kit-dc_en/circuit-construction-kit-dc_en.html" style="font-size:1.5em;color:#FFFFFF;" rel="external">circuit-construction-kit-dc(HTML5)</a><br /></p>
+		<p><a href="simulation/physics/circuit-construction-kit-ac_en/circuit-construction-kit-ac_en.jar" style="font-size:1.5em;color:#FFFFFF;" rel="external">circuit-construction-kit-ac(JAVA)</a><br /></p>
 		
 		<p><a href="webgl-clouds.html" style="font-size:1.5em;color:#326696;">webgl-clouds(HTML5)</a><br /></p>
 		<p><a href="crazy.html" style="font-size:1.5em;color:purple;">crazy-tentacles(HTML5)</a><br /></p>
@@ -45,8 +51,8 @@
 		<!--Function Link Over-->
 		<!--Personal Info Start-->
 		<p style="font-size:2em;color:grey;"><i>------Contact------</i><br /></p>
-		<p><a rel="external" href="https://github.com/yaozeye" style="font-variant:none;" title="GitHub">GitHub</a><br /></p>
-		<p><a rel="external" href="https://twitter.com/xfy_yyz/" style="font-variant:none;" title="Twitter">Twitter</a><br /></p>
+		<p><a rel="external" href="https://github.com/yaozeye" style="" title="GitHub">GitHub</a><br /></p>
+		<p><a rel="external" href="https://twitter.com/xfy_yyz/" style="" title="Twitter">Twitter</a><br /></p>
 		<p><a rel="external"><img src="https://y.gtimg.cn/music/icon/v1/pc/nsvip8.png" alt="LV8" title="LV8" /></a><br /></p>
 		<p><a href="mailto:yaozeye@outlook.com" style="text-decoration:none;" title="Email"><input type="button" value="Email" onclick="alert('yaozeye@foxmail.com; yaozeye@outlook.com; yaozeye@yahoo.co.jp;')"></input></a><br /><br /><br /></p>
 		<!--Personal Info Over-->
@@ -68,25 +74,27 @@
 					title="Valid CSS!" />
 			</a>
 		</p><hr />
-		<script type="text/javascript">
-			document.write("PixelDepth: " + screen.pixelDepth + "bit");
-</script><p></p><script type="text/javascript">
-			document.write("BrowserCode: " + navigator.appCodeName);
-</script><p></p><script type="text/javascript">
-			document.write("BrowserCore: " + navigator.appName);
-</script><p></p><script type="text/javascript">
-			document.write("JavaSupport: " + navigator.javaEnabled());
-</script><p></p><script type="text/javascript">
-			document.write("CookieSupport: " + navigator.cookieEnabled);
-</script><p></p><script type="text/javascript">
-			document.write("OS: " + navigator.appVersion);
-</script><p></p><script type="text/javascript">
-			document.write("OS Platform: " + navigator.platform);
-</script><p></p><script type="text/javascript">
-			document.write("HistoryURL(s)： " + history.length);
-		</script><p></p>
-		<p id="copyright-white">
-				Copyright &copy; 2018 Yaoze Ye
-		</p>
+<script type="text/javascript">
+	document.write("PixelDepth: " + screen.pixelDepth + "bit");
+</script><p></p>
+<script type="text/javascript">
+	document.write("BrowserCode: " + navigator.appCodeName);
+</script><p></p>
+<script type="text/javascript">
+	document.write("BrowserCore: " + navigator.appName);
+</script><p></p>
+<script type="text/javascript">
+	document.write("JavaSupport: " + navigator.javaEnabled());
+</script><p></p>
+<script type="text/javascript">
+	document.write("CookieSupport: " + navigator.cookieEnabled);
+</script><p></p>
+<script type="text/javascript">
+	document.write("OS: " + navigator.appVersion);
+</script><p></p>
+<script type="text/javascript">
+	document.write("OS Platform: " + navigator.platform);
+</script><p></p>
+		<p id="copyright-white">Copyright &copy; 2018 Yaoze Ye</p>
 	</body>
 </html>
