--- a/parallax-slider/index.html
+++ b/parallax-slider/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml">
     <head>
         <title>Parallax Slider with jQuery</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+		<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
+		<meta http-equiv="Content-Language" content="en-us" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+		<meta http-equiv="imagetoolbar" content="false" />
         <meta name="description" content="Parallax Slider with jQuery" />
         <meta name="keywords" content="parallax, jquery, slider, slideshow, rotation, perspective"/>
 		<link rel="shortcut icon" href="../favicon.ico" type="image/x-icon"/>
@@ -15,6 +18,7 @@
 			Cufon.replace('.footer',{ textShadow: '1px 1px #000'});
 			Cufon.replace('.pxs_loading',{ textShadow: '1px 1px #000'});
 		</script>
+		<!--[if lte IE 9]><script type="text/javascript" src="../select/selectivizr.js"></script><![endif]-->
     </head>
     <body>
 		<div class="wrapper">
