--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	</head>
 	<body>
 		<h1 style="text-shadow: 1px 15px 45px #993300;"><i><b>YaozeYE Personal Page</b></i></h1><hr />
-		<h2 style="font-size:45px;color:white;text-shadow: 3px 12px 80px #FFFFFF;"><i><b>March, 2018</b></i></h2>
+		<h2 style="font-size:45px;color:white;text-shadow: 3px 12px 80px #FFFFFF;"><i><b>April, 2018</b></i></h2>
 		<p><a href="weeklymusic.html" style="text-decoration:none;"><input id="h-caps-red" type="button" value="Music"></input></a><br /></p>
 		<!--Function Link-->
 		<p style="font-size:2em;color:grey;"><i>------Function Module------</i><br /></p>
@@ -95,6 +95,7 @@
 <script type="text/javascript">
 	document.write("OS Platform: " + navigator.platform);
 </script><p></p>
+<p>This page was built with ❤ by Yaoze Ye</p>
 		<p id="copyright-white">Copyright &copy; 2018 Yaoze Ye</p>
 	</body>
 </html>
