--- a/index.html
+++ b/index.html
@@ -29,8 +29,6 @@
 		<p><a href="grid-effect/index.html" style="font-size:1.5em;color:#3498DB;" rel="external">grid-effect1(HTML5)</a><br /></p>
 		<p><a href="grid-effect/index2.html" style="font-size:1.5em;color:#F24333;" rel="external">grid-effect2(HTML5)</a><br /></p>
 		<p><a href="number-progress/index.html" style="font-size:1.5em;color:#176785;" rel="external">number-progress(HTML5)</a><br /></p>
-		<p><a href="page-transitions/index.html" style="font-size:1.5em;color:rgba(245, 140, 186, 1);" rel="external">page-transitions(HTML5)</a><br /></p>
-		<p><a href="parallax-slider/index.html" style="font-size:1.5em;color:#222;" rel="external">parallax-slider(HTML5)</a><br /></p>	
 		
 		<p><a href="simulation/physics/faradays-law_en/faradays-law_en.html" style="font-size:1.5em;color:#FFFFFF;" rel="external">Faraday's Law(HTML5)</a><br /></p>
 		<p><a href="simulation/physics/capacitor-lab-basics_en/capacitor-lab-basics_en.html" style="font-size:1.5em;color:#FFFFFF;" rel="external">capacitor-lab-basics(HTML5)</a><br /></p>
@@ -95,7 +93,7 @@
 <script type="text/javascript">
 	document.write("OS Platform: " + navigator.platform);
 </script><p></p>
-<p>This page was built with ❤ by Yaoze Ye</p>
+<p>This page was built with ❤ by Yaoze Ye</p><p></p>
 		<p id="copyright-white">Copyright &copy; 2018 Yaoze Ye</p>
 	</body>
 </html>
