--- a/Log.html
+++ b/Log.html
@@ -49,7 +49,7 @@ iframe#h5logo {overflow:auto; width:512px; height:512px; }
 		<p>02/01<br />sync GitHub<br /><br /><br /></p>
 		<p>02/23<br />sim optimized<br />Log code simplified<br /><br /><br /></p>
 		<p>03/17<br />sync GitHub<br />simulation Circuit Construction Kit: DC updated<br /><br /><br /></p>
-		<p>03/31<br />April Theme<br /><br /><br /></p>
+		<p>03/31<br />April Theme<br />Page Loading Effects<br /><br /><br /></p>
 		<p><br /><br /><br /><br /><br /><br /></p>
 		<iframe id="h5logo" src="svg/h5logo.svg"></iframe><p></p>
 		<iframe id="earth" src="svg/earthasia.svg"></iframe><p></p>
