--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 		<!--Function Link-->
 		<p style="font-size:2em;color:grey;"><i>------Function Module------</i><br /></p>
 		
-		<p><a href="grid-effect/index.html" style="font-size:1.5em;color:#3498DB;" rel="external">grid-effect1(HTML5)</a><br /></p>
-		<p><a href="grid-effect/index2.html" style="font-size:1.5em;color:#F24333;" rel="external">grid-effect2(HTML5)</a><br /></p>
+		<p><a href="page-loading-effects/index.html" style="font-size:1.5em;color:#1212BD;" rel="external">page-loading-effects(HTML5)</a><br /></p>
+		<p><a href="grid-effect/index.html" style="font-size:1.5em;color:#3498DB;" rel="external">grid-effect(HTML5)</a><br /></p>
 		<p><a href="number-progress/index.html" style="font-size:1.5em;color:#176785;" rel="external">number-progress(HTML5)</a><br /></p>
 		
 		<p><a href="simulation/physics/faradays-law_en/faradays-law_en.html" style="font-size:1.5em;color:#FFFFFF;" rel="external">Faraday's Law(HTML5)</a><br /></p>
