--- a/number-progress/index.html
+++ b/number-progress/index.html
@@ -53,7 +53,7 @@
   </section>
 
   <p><a href="https://yaozeye.github.io" rel="externak">Yaoze YE</a></p>
-  <p><a href="https://github.com/yaozeye/yaozeye.github.io/number-progress/number-progress/" rel="external">This idea</a> was designed by <a href="https://yaozeye.github.io">Yaoze Ye</a> by HTML + CSS.</p>
+  <p><a href="https://github.com/yaozeye/yaozeye.github.io/number-progress/" rel="external">This idea</a> was designed by <a href="https://yaozeye.github.io">Yaoze Ye</a> by HTML + CSS.</p>
   <div class="footer-banner" style="width:728px; margin:60px auto"></div>
 </div>
 
