--- a/page-loading-effects/index3.html
+++ b/page-loading-effects/index3.html
@@ -1,53 +1,55 @@
 <!DOCTYPE html>
-<html lang="zh-cn">
+<html lang="en-us">
 	<head>
 		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge"> 
-		<meta name="viewport" content="width=device-width, initial-scale=1"> 
-		<title>页面加载特效（Page Loading Effects） | Demo 3</title>
-		<meta name="description" content="页面加载特效（Page Loading Effects）: " />
-		
-		<meta name="author" content="Codrops" />
-		<link rel="shortcut icon" href="../favicon.ico">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" /> 
+		<meta name="viewport" content="width=device-width, initial-scale=1" /> 
+		<title>Page Loading Effects|Demo</title>
+		<meta name="description" content="Page Loading Effects: " />
+		<meta http-equiv="imagetoolbar" content="false" />
+		<meta name="author" content="yaozeye.github.io" />
+		<meta name="Copyright" content="Copyright yaozeye.github.io All Rights Reserved." />
+		<meta name="MSSmartTagsPreventParsing" content="true" />
 		<link rel="stylesheet" type="text/css" href="css/normalize.css" />
 		<link rel="stylesheet" type="text/css" href="css/demo.css" />
 		<link rel="stylesheet" type="text/css" href="css/component.css" />
+		<link rel="shortcut icon" href="../favicon.ico" type="image/x-icon" /> 
+		<link rel="apple-touch-icon" href="../favicon.ico" />
 		<script src="js/snap.svg-min.js"></script>
+		<script type="text/javascript" src="../js/targetblank.js"></script>
+		<!--[if lte IE 9]><script type="text/javascript" src="../select/selectivizr.js"></script><![endif]-->
 		<!--[if IE]>
   		<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 		<![endif]-->
-		<link rel="stylesheet" href="http://dreamsky.github.io/main/blog/common/init.css">
-		<script src="http://dreamsky.github.io/main/blog/common/jquery.min.js"></script>
-		<script src="http://dreamsky.github.io/main/blog/common/init.js"></script>
 	</head>
 	<body>
 		<div id="pagewrap" class="pagewrap">
 			<div class="container show" id="page-1">
 				<!-- Top Navigation -->
 				<header class="codrops-header">
-					<h1 style="margin-top:100px">页面加载特效（Page Loading Effects） <span></span></h1>
+					<h1 style="margin-top:100px">Page Loading Effects<span></span></h1>
 				</header>
 				<section class="columns clearfix">
 					<div class="column">
 						<nav class="codrops-demos">
-							<a href="index.html">效果一</a>
-							<a href="index2.html">效果二</a>
-							<a class="current-demo" href="index3.html">效果三</a>
-							<a href="index4.html">效果四</a>
-							<a href="index5.html">效果五</a>
-							<a href="index6.html">效果六</a>
-							<a href="index7.html">效果七</a>
-							<a href="index8.html">效果八</a>
-							<a href="index9.html">效果九</a>
-							<a href="index10.html">效果十</a>
-							<a href="index11.html">效果十一</a>
-							<a href="index12.html">效果十二</a>
-							<a href="index13.html">效果十三</a>
+							<a href="index.html">Effect1</a>
+							<a href="index2.html">Effect2</a>
+							<a class="current-demo" href="index3.html">Effect3</a>
+							<a href="index4.html">Effect4</a>
+							<a href="index5.html">Effect5</a>
+							<a href="index6.html">Effect6</a>
+							<a href="index7.html">Effect7</a>
+							<a href="index8.html">Effect8</a>
+							<a href="index9.html">Effect9</a>
+							<a href="index10.html">Effect10</a>
+							<a href="index11.html">Effect11</a>
+							<a href="index12.html">Effect12</a>
+							<a href="index13.html">Effect13</a>
 						</nav>
 					</div>
 					<div class="column">
 						<p></p>
-						<p><a class="pageload-link" href="#page-2">点击预览效果</a></p>
+						<p><a class="pageload-link" href="#page-2">Click to preview Effect</a></p>
 					</div>
 				</section>
 				<div class="footer-banner" style="width:728px; margin:30px auto"></div>
@@ -56,8 +58,8 @@
 			<!-- The new page dummy; this would be dynamically loaded content -->
 			<div class="container" id="page-2">
 				<section>
-					<h2>这是一个示例页面.</h2>
-					<p><a class="pageload-link" href="#page-1">返回</a></p>
+					<h2>This is a sample page.</h2>
+					<p><a class="pageload-link" href="#page-1">Back</a></p>
 				</section>
 			</div><!-- /container -->
 
