--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
 		
 		<p><a href="webgl-clouds.html" style="font-size:1.5em;color:#326696;">webgl-clouds(HTML5)</a><br /></p>
 		<p><a href="crazy.html" style="font-size:1.5em;color:purple;">crazy-tentacles(HTML5)</a><br /></p>
-		<p><a href="Demo1.html" style="font-size:1.5em;color:red;">page-preloading1(HTML5)</a><br /></p>
-		<p><a href="Demo2.html" style="font-size:1.5em;color:blue;">page-preloading2(HTML5)</a><br /></p>
+		<p><a href="Demo1.html" style="font-size:1.5em;color:red;">page-preloading(HTML5)</a><br /></p>
 		<p><a href="ball.html" style="font-size:1.5em;color:black;">ball-pool(HTML5)</a><br /></p>
 		<p><a href="textillate.html" style="font-size:1.5em;color:white;">textillate(HTML5)</a><br /></p>
 		<p><a href="shine.html" style="font-size:1.5em;color:grey;">shine(HTML5)</a><br /></p>
@@ -71,7 +70,7 @@
 					alt="Valid CSS!"
 					title="Valid CSS!" />
 			</a>
-		</p><hr />
+		</p><p>This page was built with ❤ by Yaoze Ye</p><p></p><hr />
 <script type="text/javascript">
 	document.write("PixelDepth: " + screen.pixelDepth + "bit");
 </script><p></p>
@@ -93,7 +92,6 @@
 <script type="text/javascript">
 	document.write("OS Platform: " + navigator.platform);
 </script><p></p>
-<p>This page was built with ❤ by Yaoze Ye</p><p></p>
-		<p id="copyright-white">Copyright &copy; 2018 Yaoze Ye</p>
+<p>This page was built with ❤ by Yaoze Ye</p><p></p>		<p id="copyright-white">Copyright &copy; 2018 Yaoze Ye</p>
 	</body>
 </html>
