--- a/Log.html
+++ b/Log.html
@@ -16,7 +16,7 @@ iframe#h5logo {overflow:auto; width:512px; height:512px; }
 	</head>
 	<body><p><a href="index.html" style="text-decoration:none;font-size:30px;color:#FFFF00;text-shadow: 5px 4px 6px #0000FF;"><b>HOMEPAGE</b></a></p>
 		<p style="font-size:40px;color:white;text-shadow: 1px 15px 45px #FFFFFF;">Website History</p><p></p>
-		<p>Last Updated On 2018-03-31 (YYYY-MM-DD):<br />❤<br /><br /><br /></p>
+		<p>Last Updated On 2018-04-14 (YYYY-MM-DD):<br />❤<br /><br /><br /></p>
 		<h1>2017</h1>
 		<p><br />10/04-10/05 (MM/DD)<br />The first mod of this site.<br />with	"<br />YaozeYE Personal Page<br />crazy-tentacles(HTML5) <br />page-preloading1(HTML5) <br />page-preloading2(HTML5) <br />ball-pool(HTML5) <br />textillate(HTML5) <br />shine(HTML5) <br />HTML_color <br /><br />GitHub <br />Twitter <br />Tencent QQ <br />Email  <br />"<br /><br /><br /></p>
 		<p>10/06<br />Add	"<br />Bubbles(Javascript) <br />loading(HTML5) <br />snake(HTML5)<br />"<br />Change Github image<br />from<br />420x420px (Internet github.com)<br />to <br />200x200px (local)<br /><br />separate the loading canvas of Homepage<br />to<br />loading(HTML5)<br /><br /><br /></p>
@@ -50,6 +50,7 @@ iframe#h5logo {overflow:auto; width:512px; height:512px; }
 		<p>02/23<br />sim optimized<br />Log code simplified<br /><br /><br /></p>
 		<p>03/17<br />sync GitHub<br />simulation Circuit Construction Kit: DC updated<br /><br /><br /></p>
 		<p>03/31<br />April Theme<br />Page Loading Effects<br /><br /><br /></p>
+		<p>04/14<br />text modified<br /><br /><br /></p>
 		<p><br /><br /><br /><br /><br /><br /></p>
 		<iframe id="h5logo" src="svg/h5logo.svg"></iframe><p></p>
 		<iframe id="earth" src="svg/earthasia.svg"></iframe><p></p>
