--- a/index.html
+++ b/index.html
@@ -92,6 +92,6 @@
 <script type="text/javascript">
 	document.write("OS Platform: " + navigator.platform);
 </script><p></p>
-<p>This page was built with ❤ by Yaoze Ye</p><p></p>		<p id="copyright-white">Copyright &copy; 2018 Yaoze Ye</p>
+<p id="copyright-white">Copyright &copy; 2018 Yaoze Ye</p>
 	</body>
 </html>
