--- a/index.html
+++ b/index.html
@@ -70,28 +70,14 @@
 					alt="Valid CSS!"
 					title="Valid CSS!" />
 			</a>
-		</p><p>This page was built with ❤ by Yaoze Ye</p><p></p><hr />
-<script type="text/javascript">
-	document.write("PixelDepth: " + screen.pixelDepth + "bit");
-</script><p></p>
-<script type="text/javascript">
-	document.write("BrowserCode: " + navigator.appCodeName);
-</script><p></p>
-<script type="text/javascript">
-	document.write("BrowserCore: " + navigator.appName);
-</script><p></p>
-<script type="text/javascript">
-	document.write("JavaSupport: " + navigator.javaEnabled());
-</script><p></p>
-<script type="text/javascript">
-	document.write("CookieSupport: " + navigator.cookieEnabled);
-</script><p></p>
-<script type="text/javascript">
-	document.write("OS: " + navigator.appVersion);
-</script><p></p>
-<script type="text/javascript">
-	document.write("OS Platform: " + navigator.platform);
-</script><p></p>
+		</p><p>This page was built with ❤<img src="https://assets-cdn.github.com/images/icons/emoji/unicode/2764.png" alt="heart" title="heart" />by Yaoze Ye</p><p></p><hr />
+<script type="text/javascript">document.write("PixelDepth: " + screen.pixelDepth + "bit");</script><p></p>
+<script type="text/javascript">document.write("BrowserCode: " + navigator.appCodeName);</script><p></p>
+<script type="text/javascript">document.write("BrowserCore: " + navigator.appName);</script><p></p>
+<script type="text/javascript">document.write("JavaSupport: " + navigator.javaEnabled());</script><p></p>
+<script type="text/javascript">document.write("CookieSupport: " + navigator.cookieEnabled);</script><p></p>
+<script type="text/javascript">document.write("OS: " + navigator.appVersion);</script><p></p>
+<script type="text/javascript">document.write("OS Platform: " + navigator.platform);</script><p></p>
 <p id="copyright-white">Copyright &copy; 2018 Yaoze Ye</p>
 	</body>
 </html>
