--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 					alt="Valid CSS!"
 					title="Valid CSS!" />
 			</a>
-		</p><p>This page was built with ❤<img src="https://assets-cdn.github.com/images/icons/emoji/unicode/2764.png" alt="heart" title="heart" />by Yaoze Ye</p><p></p><hr />
+		</p><p>This page was built with <img src="https://assets-cdn.github.com/images/icons/emoji/unicode/2764.png" alt="heart" title="heart" /> by Yaoze Ye</p><p></p><hr />
 <script type="text/javascript">document.write("PixelDepth: " + screen.pixelDepth + "bit");</script><p></p>
 <script type="text/javascript">document.write("BrowserCode: " + navigator.appCodeName);</script><p></p>
 <script type="text/javascript">document.write("BrowserCore: " + navigator.appName);</script><p></p>
