--- a/index.html
+++ b/index.html
@@ -79,6 +79,6 @@
 <script type="text/javascript">document.write("CookieSupport: " + navigator.cookieEnabled);</script><p></p>
 <script type="text/javascript">document.write("OS: " + navigator.appVersion);</script><p></p>
 <script type="text/javascript">document.write("OS Platform: " + navigator.platform);</script><p></p>
-<p id="copyright-white">2018 Yaoze Ye</p>
+<p id="copyright-white">Copyright &copy; 2018 Yaoze Ye</p>
 	</body>
 </html>
