--- a/Log.html
+++ b/Log.html
@@ -63,6 +63,6 @@ iframe#h5logo {overflow:auto; width:512px; height:512px; }
 	src="https://www.w3.org/Icons/valid-svg11"
 	alt="Valid SVG!" />
 </a></p>
-		<p>2018 Yaoze Ye</p>	
+		<p>Copyright &copy; 2018 Yaoze Ye</p>	
 	</body>
 </html>
