--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
 		<script type="text/javascript" src="js/targetblank.js"></script>
 		<!--[if lte IE 9]><script type="text/javascript" src="select/selectivizr.js"></script><![endif]-->
 		<title>ホーム｜葉-YaozeYE</title>
+		<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-7553762304316174",
+    enable_page_level_ads: true
+  });
+</script>
 	</head>
 	<body>
 		<h1 style="text-shadow: 1px 15px 45px #993300;"><i><b>YaozeYE Personal Page</b></i></h1><hr />
