--- a/music/17-dec03-dec09.html
+++ b/music/17-dec03-dec09.html
@@ -3,72 +3,34 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-		<meta http-equiv="Cache-Control" content="no-siteapp" />
-		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" sizes="any" />
+		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 		<link rel="stylesheet" href="../common/init.css" />
 		<!--[if lte IE 9]><script src="../select/selectivizr.js"></script><![endif]-->
 		<title>17Dec.03-Dec.09</title>
 	</head>
 	<body>
-		<a id="home-black" href="../index.html">
-					HOMEPAGE
-		</a>
-		<br />
+		<a id="home-black" href="../index.html">HOMEPAGE</a>
+		<br /><br /><br />
 		<!--Notice-->
-		<br />
-		<br />
-		<a href="../music.html" onclick="_blank">For More? Click here!</a>
-		<br />
-		<br />
-		<br />
+		<a href="../music.html" onclick="_blank">For More? Click here!</a><br /><br /><br />
 		<!--Notice Over-->
-		<!--
-			iframe start
-		-->
+		<!--iframe start-->
 		<br />
-		<p>
-			<b>
-				iframe 
-			</b>
-		</p>
+		<p><b>iframe</b></p>
 		<br />
-		<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width="0" height="0">
-			Your browser does not support iframe, please update your browser to the latest version.
-		</iframe>
+		<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width="0" height="0">Your browser does not support iframe, please update your browser to the latest version.</iframe>
 		<br />
-		<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width="70%" height="86" src="https://music.163.com/outchain/player?type=2&id=22715404&auto=0&height=66">
-			Alchemy (Yui ver.) - Girls Dead Monster
-		</iframe>
+		<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width="70%" height="86" src="https://music.163.com/outchain/player?type=2&id=22715404&auto=0&height=66">Alchemy (Yui ver.) - Girls Dead Monster</iframe>
 		<br />
-		<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width="60%" height="86" src="https://music.163.com/outchain/player?type=2&id=471825&auto=0&height=66">
-			my most precious treasure - 麻枝准
-		</iframe>
+		<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width="60%" height="86" src="https://music.163.com/outchain/player?type=2&id=471825&auto=0&height=66">my most precious treasure - 麻枝准</iframe>
 		<br />
-		<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width="50%" height="86" src="https://music.163.com/outchain/player?type=2&id=32235890&auto=0&height=66">
-			言葉のいらない約束 - 鎖那
-		</iframe>
+		<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width="50%" height="86" src="https://music.163.com/outchain/player?type=2&id=32235890&auto=0&height=66">言葉のいらない約束 - 鎖那</iframe>
+		<br /><br />
+		<!--iframe over-->
 		<br />
-		
+		<a target="_blank" href="https://mail.qq.com/cgi-bin/qm_share?t=qm_mailme&email=9o_XmYyTj5O2kJmOm5efmtiVmZs" style="text-decoration:none;">Any questions please click here to ask for help. (Email)</a>
 		<br />
-		<!--
-			iframe over
-		-->
-		<br />
-		<a target="_blank" href="https://mail.qq.com/cgi-bin/qm_share?t=qm_mailme&email=9o_XmYyTj5O2kJmOm5efmtiVmZs" style="text-decoration:none;">
-			Any questions please click here to ask for help. (Email)
-		</a>
-		<br />
-		<p>
-			Flash (not recommend for all devices , not support iOS)<br />FLASH has been removed for the security reason.
-		</p>
-		<br />
-		<br />
-		<br />
-		<br />
-		<br />
-		<br />
-		<p id="copyright-white">
-				Copyright (C) yaozeye@foxmail.com
-		</p>
+		<p>Flash (not recommend for all devices , not support iOS)<br />FLASH has been removed for the security reason.</p>
+		<p id="copyright-white">Copyright &copy; 2017 Yaoze Ye</p>
 	</body>
 </html>
