--- a/music/music-2nd.html
+++ b/music/music-2nd.html
@@ -3,94 +3,45 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-		<meta http-equiv="Cache-Control" content="no-siteapp" />
-		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" sizes="any" />
+		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 		<link rel="stylesheet" href="../common/init.css" />
 		<title>Music-2nd</title>
 	</head>
 	<body>
-		<a id="home-black" href="../index.html">
-					HOMEPAGE
-		</a>
+		<a id="home-black" href="../index.html">HOMEPAGE</a>
 		<br />
 		<!--Notice-->
-		<p>
-			<b>
-				<i>
-					Please wait when loading this page!<br />Not completely available now.<br />This site is still under construction.
-				</i>
-			</b>
-		</p>
-		<br />
-		<br />
+		<p><b><i>Please wait when loading this page!<br />Not completely available now.<br />This site is still under construction.</i></b></p>
+		<br /><br />
 		<a href="../music.html" onclick="_blank">For More? Click here!</a>
-		<br />
-		<br />
-		<br />
+		<br /><br /><br />
 		<!--Notice Over-->
-		<!--
-			iframe start
-		-->
+		<!--iframe start-->
 		<br />
-		<p>
-			<b>
-				iframe 
-			</b>
-		</p>
+		<p><b>iframe</b></p>
 		<br />
-		<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width="0" height="0">
-			Your browser does not support iframe, please update your browser to the latest version.
-		</iframe>
+		<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width="0" height="0">Your browser does not support iframe, please update your browser to the latest version.</iframe>
 		<br />
-		<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width="60%" height="86" src="https://music.163.com/outchain/player?type=2&id=29307041&auto=0&height=66">
-			aLIEz - mizuki/SawanoHiroyuki[nZk]
-		</iframe>
+		<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width="60%" height="86" src="https://music.163.com/outchain/player?type=2&id=29307041&auto=0&height=66">aLIEz - mizuki/SawanoHiroyuki[nZk]</iframe>
 		<br />
-		<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width="50%" height="86" src="https://music.163.com/outchain/player?type=2&id=860226&auto=0&height=66">
-			この花火が终わるまでに - さちっぷ～
-		</iframe>
+		<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width="50%" height="86" src="https://music.163.com/outchain/player?type=2&id=860226&auto=0&height=66">この花火が终わるまでに - さちっぷ～</iframe>
 		<br />
-		<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width="40%" height="86" src="https://music.163.com/outchain/player?type=2&id=30431340&auto=0&height=66">
-			aLIEz [mZk ver.] - mizuki/SawanoHiroyuki[nZk]
-		</iframe>
+		<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width="40%" height="86" src="https://music.163.com/outchain/player?type=2&id=30431340&auto=0&height=66">aLIEz [mZk ver.] - mizuki/SawanoHiroyuki[nZk]</iframe>
 		<br />
-		<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width="40%" height="86" src="https://music.163.com/outchain/player?type=2&id=30431362&auto=0&height=66">
-			βios - 小林未郁
-		</iframe>
+		<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width="40%" height="86" src="https://music.163.com/outchain/player?type=2&id=30431362&auto=0&height=66">βios - 小林未郁</iframe>
 		<br />
-		<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width="40%" height="86" src="https://music.163.com/outchain/player?type=2&id=469772&auto=0&height=66">	
-			“笼のなか” - 増田俊郎
-		</iframe>
+		<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width="40%" height="86" src="https://music.163.com/outchain/player?type=2&id=469772&auto=0&height=66">“笼のなか” - 増田俊郎</iframe>
 		<br />
-		<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width="40%" height="86" src="https://music.163.com/outchain/player?type=2&id=1220787&auto=0&height=66">
-			Nature's Path - Dan Gibson
-		</iframe>
+		<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width="40%" height="86" src="https://music.163.com/outchain/player?type=2&id=1220787&auto=0&height=66">Nature's Path - Dan Gibson</iframe>
 		<br />
-		<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width="40%" height="86" src="https://music.163.com/outchain/player?type=2&id=26515985&auto=0&height=66">
-			ASMR - Morpheus
-		</iframe>
+		<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width="40%" height="86" src="https://music.163.com/outchain/player?type=2&id=26515985&auto=0&height=66">ASMR - Morpheus</iframe>
+		<br /><br />
+		<!--iframe over-->
 		<br />
-		
+		<a target="_blank" href="https://mail.qq.com/cgi-bin/qm_share?t=qm_mailme&email=9o_XmYyTj5O2kJmOm5efmtiVmZs" style="text-decoration:none;">Any questions please click here to ask for help. (Email)</a>
 		<br />
-		<!--
-			iframe over
-		-->
-		<br />
-		<a target="_blank" href="https://mail.qq.com/cgi-bin/qm_share?t=qm_mailme&email=9o_XmYyTj5O2kJmOm5efmtiVmZs" style="text-decoration:none;">
-			Any questions please click here to ask for help. (Email)
-		</a>
-		<br />
-		<p>
-			Flash (not recommend for all devices , not support iOS)<br />FLASH has been removed for the security reason.
-		</p>
-		<br />
-		<br />
-		<br />
-		<br />
-		<br />
-		<br />
-		<p id="copyright-white">
-				Copyright (C) yaozeye@foxmail.com
-		</p>
+		<p>Flash (not recommend for all devices , not support iOS)<br />FLASH has been removed for the security reason.</p>
+		<br /><br /><br /><br /><br /><br />
+		<p id="copyright-white">Copyright &copy; 2017 Yaoze Ye</p>
 	</body>
 </html>
