--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		<p><a href="weeklymusic.html" style="text-decoration:none;" rel="external"><input id="h-caps-red" type="button" value="Music"></input></a><br /></p>
 		<!--Function Link-->
 		<p style="font-size:2em;color:grey;"><i>------Function Module------</i><br /></p>
-		<p><a href="https://yaozeye.github.io/Physics301-1619.html" style="font-size:1.5em;color:#00A1D6;" rel="external">physics301-1619-aki-review-1st-video</a><br /></p>
+		<p><a href="Physics301-1619.html" style="font-size:1.5em;color:#00A1D6;" rel="external">physics301-1619-aki-review-1st-video</a><br /></p>
 		<p><a href="page-loading-effects/index.html" style="font-size:1.5em;color:#1212BD;" rel="external">page-loading-effects(HTML5)</a><br /></p>
 		<p><a href="grid-effect/index.html" style="font-size:1.5em;color:#3498DB;" rel="external">grid-effect(HTML5)</a><br /></p>
 		<p><a href="number-progress/index.html" style="font-size:1.5em;color:#176785;" rel="external">number-progress(HTML5)</a><br /></p>
@@ -59,7 +59,7 @@
 		<div id="div-center"></div>
 		<p><a rel="external" href="https://validator.w3.org/check?uri=referer"><img style="border:0;width:88px;height:31px" src="https://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Strict" title="Valid XHTML 1.0 Strict" /></a></p>		
 		<p><a rel="external" href="https://jigsaw.w3.org/css-validator/check/referer"><img style="border:0;width:88px;height:31px" src="https://jigsaw.w3.org/css-validator/images/vcss-blue" alt="Valid CSS!" title="Valid CSS!" /></a></p>
-		<p>This page was built with <img src="https://assets-cdn.github.com/images/icons/emoji/unicode/2764.png" alt="heart" title="heart" /> by Yaoze Ye</p><p></p>
+		<p>This page was built with <!--<img src="https://assets-cdn.github.com/images/icons/emoji/unicode/2764.png" alt="heart" title="heart" />-->heart by Yaoze Ye</p><p></p>
 		<hr />
 <script type="text/javascript">document.write("PixelDepth: " + screen.pixelDepth + "bit");</script><p></p>
 <script type="text/javascript">document.write("BrowserCode: " + navigator.appCodeName);</script><p></p>
