--- a/Log.html
+++ b/Log.html
@@ -55,9 +55,9 @@ iframe#h5logo {overflow:auto; width:512px; height:512px; }
 		<p>10/31<br />Happy Halloween<br /><br /></p>
 		<p>12/02<br />Halloween theme removed<br />Christmas theme added<br /><br /><br /><br /></p>
 		<h1>2019</h1>
-		<p><br />01/16<br />dns-prefetch added<br />rel="external" applied to more "a" tag (index.html)<br />2018==>2019<br />Log code simpilidied<br /><br /></p>
+		<p><br />01/16<br />dns-prefetch added<br />rel="external" applied to more "a" tag (index.html)<br />2018==>2019<br />Log code simpilified<br /><br /></p>
 		<p><br />07/24<br />index code slightly simplified<br /><br /></p>
-		<p><br />07/26<br />index optimised<br /><br /></p>
+		<p><br />07/26<br />index optimised<br />Log text revised<br /><br /></p>
 		<p><br /><br /><br /><br /></p>
 		<iframe id="h5logo" src="svg/h5logo.svg"></iframe><p></p>
 		<iframe id="earth" src="svg/earthasia.svg"></iframe><p></p>
