--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 		<p><a href="weeklymusic.html" style="text-decoration:none;" rel="external"><input id="h-caps-red" type="button" value="Music"></input></a><br /></p>
 		<!--Function Link-->
 		<p style="font-size:2em;color:grey;"><i>------Function Module------</i><br /></p>
+		<p><a href="videosub/qqmusicmver9.html" style="font-size:1.5em;color:#00A1D6;" rel="external">QQ Music Mobile (TME) Ver9.0 Early Access</a><br /></p>
 		<p><a href="videosub/ja1_vocab_01.html" style="font-size:1.5em;color:#00A1D6;" rel="external">Japanese Vocabuly 01 (test)</a><br /></p>
 		<p><a href="Physics301-1619.html" style="font-size:1.5em;color:#00A1D6;" rel="external">physics301-1619-aki-review-1st-video</a><br /></p>
 		<p><a href="page-loading-effects/index.html" style="font-size:1.5em;color:#1212BD;" rel="external">page-loading-effects(HTML5)</a><br /></p>
