--- a/videosub/qqmusicmver9.html
+++ b/videosub/qqmusicmver9.html
@@ -10,6 +10,7 @@
 		<meta name="MSSmartTagsPreventParsing" content="true" />
 		<link rel="dns-prefetch" href="//github.com" />
 		<link rel="stylesheet" href="../common/init.css" />
+		<link rel="stylesheet" href="../common/videosubiframe.css" />
 		<link rel="shortcut icon" href="../favicon.ico" type="image/x-icon" /> 
 		<link rel="apple-touch-icon" href="../favicon.ico" />
 		<script src="../js/targetblank.js"></script>
@@ -17,7 +18,7 @@
 		<title>QQ Music Mobile Ver9.0 Early Access</title>
 	</head>
 	<body>
-		<iframe src="https://player.bilibili.com/player.html?aid=51847618&cid=90769649&page=1" width="1280" height="720" scrolling="no" frameborder="no" framespacing="0" allowfullscreen> </iframe>
+		<iframe src="https://player.bilibili.com/player.html?aid=51847618&cid=90769649&page=1" width="1280" height="720" allowfullscreen> </iframe>
 		<p id="copyright-white">Copyright &copy; 2019 Yaoze Ye</p>
 	</body>
 </html>
