--- a/videosub/ja1_vocab_01.html
+++ b/videosub/ja1_vocab_01.html
@@ -10,7 +10,7 @@
 		<meta name="MSSmartTagsPreventParsing" content="true" />
 		<link rel="dns-prefetch" href="//github.com" />
 		<link rel="stylesheet" href="../common/init.css" />
-		<link rel="stylesheet" href="../common/videosubiframe.css" />
+		<link rel="stylesheet" href="../common/videosubiframe_bili.css" />
 		<link rel="shortcut icon" href="../favicon.ico" type="image/x-icon" /> 
 		<link rel="apple-touch-icon" href="../favicon.ico" />
 		<script src="../js/targetblank.js"></script>
