--- a/chinamap/index.html
+++ b/chinamap/index.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1,maximum-scale=1"/>
-    <title>china</title>
+    <title>China</title>
     <script type="text/javascript" src="lib/d3.js"></script>
 
     <style>
+		background {
+			color: #cbd6e5;
+		}
         path {
             fill: #ccc;
             stroke: #fff;
