--- a/chinamap/index.html
+++ b/chinamap/index.html
@@ -7,8 +7,8 @@
     <script type="text/javascript" src="lib/d3.js"></script>
 
     <style>
-		background {
-			color: #cbd6e5;
+		body {
+			background: #cbd6e5;
 		}
         path {
             fill: #ccc;
