--- a/chinamap/index.html
+++ b/chinamap/index.html
@@ -8,11 +8,11 @@
 
     <style>
 		body {
-			background: #cbd6e5;
+			background: #fff;
 		}
         path {
-            fill: #ccc;
-            stroke: #fff;
+            fill: #cbd6e5;
+            stroke: #7197c9;
             stroke-width: .5px;
         }
 
