--- a/chinamap/index.html
+++ b/chinamap/index.html
@@ -13,7 +13,7 @@
         path {
             fill: #cbd6e5;
             stroke: #7197c9;
-            stroke-width: .5px;
+            stroke-width: 1px;
         }
 
         path:hover {
