--- a/Log.html
+++ b/Log.html
@@ -59,7 +59,7 @@ iframe#h5logo {overflow:auto; width:512px; height:512px; }
 		<p><br />07/24<br />index code slightly simplified<br /><br /></p>
 		<p><br />07/26<br />index optimised<br />Log text revised<br /><br /></p>
 		<p><br />07/26<br />videosub added<br />iframe external video player pages added (experimental)<br /><br /></p>
-		<p><br />12/31<br />index 2020<br /><br /></p>
+		<p><br />12/31<br />index 2020<br />css font modification<br /><br /></p>
 		<p><br /><br /><br /><br /></p>
 		<iframe id="h5logo" src="svg/h5logo.svg"></iframe><p></p>
 		<iframe id="earth" src="svg/earthasia.svg"></iframe><p></p>
