--- a/index.html
+++ b/index.html
@@ -55,10 +55,12 @@
 		<p style="font-size:2em;color:grey;"><i>------Contact------</i><br /></p>
 		<p><a rel="external" href="https://github.com/yaozeye" style="" title="GitHub">GitHub</a><br /></p>
 		<p><a rel="external" href="https://twitter.com/xfy_yyz/" style="" title="Twitter">Twitter</a><br /></p>
-		<p><a rel="external"><img src="https://y.gtimg.cn/music/icon/v1/pc/nsvip8.png" alt="LV8" title="LV8" /></a><br /></p>
-		<div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="173c047c-b580-460e-9d85-1e28030f8533" data-share-badge-host="https://www.youracclaim.com"></div>
+		<p><img src="https://y.gtimg.cn/music/icon/v1/pc/nsvip8.png" alt="LV8" title="LV8" /><br /></p>
+		<p><a rel="external" href="https://www.youracclaim.com/badges/173c047c-b580-460e-9d85-1e28030f8533/embedded" style=""><img src="https://images.youracclaim.com/size/680x680/images/16bc9e00-43a7-421c-a775-a990fbc590ac/MOS_Word.png" alt="Microsoft Office Specialist Word" title="Microsoft Office Specialist Word" /></a><br /></p>
+		<p><a rel="external" href="https://www.youracclaim.com/badges/da545540-e511-4c98-ae7e-2ef84a402fbd/embedded" style=""><img src="https://images.youracclaim.com/size/680x680/images/b4fbd3ac-b964-4eaf-ac28-a286964ec49e/MOS_PowerPoint.png" alt="Microsoft Office Specialist PowerPoint" title="LV8" /></a><br /></p>
+<!--		<div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="173c047c-b580-460e-9d85-1e28030f8533" data-share-badge-host="https://www.youracclaim.com"></div>
 		<div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="da545540-e511-4c98-ae7e-2ef84a402fbd" data-share-badge-host="https://www.youracclaim.com"></div><p><br /></p>
-		<p><a href="mailto:yaozeye@outlook.com" style="text-decoration:none;" title="Email"><input type="button" value="Email" onclick="alert('yaozeye@foxmail.com; yaozeye@outlook.com; yaozeye@yahoo.co.jp;')"></input></a><br /><br /><br /></p>
+-->		<p><a href="mailto:yaozeye@outlook.com" style="text-decoration:none;" title="Email"><input type="button" value="Email" onclick="alert('yaozeye@foxmail.com; yaozeye@outlook.com; yaozeye@yahoo.co.jp;')"></input></a><br /><br /><br /></p>
 		<!--Personal Info Over-->
 		<p><a href="Log.html" style="font-size:1em;color:grey;" title="Website Log">Log</a><br /><br /></p>
 		<div id="div-center"></div>
