--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 		<!--<p>This page was built with /*<img src="https://assets-cdn.github.com/images/icons/emoji/unicode/2764.png" alt="heart" title="heart" />*/heart by Yaoze Ye</p><p></p>-->
 		<p>This page was built with <img alt="❤" title="heart" src="https://s.w.org/images/core/emoji/12.0.0-1/svg/2764.svg" /> by Yaoze Ye</p><p></p>
 		<hr />
-<script type="text/javascript" async src="//cdn.youracclaim.com/assets/utilities/embed.js"></script>
+<!--<script type="text/javascript" async src="//cdn.youracclaim.com/assets/utilities/embed.js"></script>-->
 <script type="text/javascript">document.write("PixelDepth: " + screen.pixelDepth + "bit");</script><p></p>
 <script type="text/javascript">document.write("BrowserCode: " + navigator.appCodeName);</script><p></p>
 <script type="text/javascript">document.write("BrowserCore: " + navigator.appName);</script><p></p>
