--- a/Log.html
+++ b/Log.html
@@ -9,9 +9,9 @@
 		<!--[if lte IE 9]><script src="select/selectivizr.js"></script><![endif]-->
 		<title>Website Log</title>
 		<style>
-body { color: #FFFFFF; background: #000000; font-family: Georgia, Arial, Century Gothic, MS Pmincho, SimSun, MS Mincho; }
-iframe#earth { overflow:auto; width:542px; height:542px; }
-iframe#h5logo {overflow:auto; width:512px; height:512px; }
+			body { color: #FFFFFF; background: #000000; font-family: Source Serif Pro, Source Serif, Noto Serif, Source Sans Pro, Source Sans, Noto Sans, Times New Roman, Arial, Calibri, Georgia; }
+			iframe#earth { overflow:auto; width:542px; height:542px; }
+			iframe#h5logo {overflow:auto; width:512px; height:512px; }
 		</style>
 	</head>
 	<body><p><a href="index.html" style="text-decoration:none;font-size:30px;color:#FFFF00;text-shadow: 5px 4px 6px #0000FF;"><b>HOMEPAGE</b></a></p>
