--- a/eye/index.html
+++ b/eye/index.html
@@ -24,6 +24,7 @@
 		</style>
 	</head>
 	<body>
-		<p id="copyright-white">Copyright &copy; 2020 Yaoze Ye</p>
+		<p>Copyright &copy; 2020 Yaoze Ye</p>
+		<p>#CF0E45</p>
 	</body>
 </html>
