--- a/library-demo/en-gb/floor03/index.html
+++ b/library-demo/en-gb/floor03/index.html
@@ -22,7 +22,7 @@
 	</head>
 	<body>
 		<h1 style="font-size:45px;text-shadow: 1px 15px 45px #993300;"><i><b>Seat Reservation - 3F - Library Management System</b></i></h1><hr />
-		<p>中文 | <a href="../../en-gb/floor03/index.html">En</a></p>
+		<p><a href="../../zh-cn/floor03/index.html">中文</a> | En</p>
 		<h2 style="font-size:35px;text-shadow: 3px 12px 80px #808080;"><i><b>H a v e F u n !</b></i></h2>
 		<!--Function Link-->
 		<p style="font-size:1.5em;"><a href="../index.html" rel="external">Homepage</a> | <a href="../floor01/index.html" rel="external">1F</a>|<a href="../floor02/index.html" rel="external">2F</a>|3F|<a href="../floor04/index.html" rel="external">4F</a></p>
