--- a/index.html
+++ b/index.html
@@ -36,16 +36,16 @@
 		<p><a href="simulation/physics/circuit-construction-kit-dc_en/circuit-construction-kit-dc_en.html" style="font-size:1.5em;color:#FFFFFF;" rel="external">circuit-construction-kit-dc(HTML5)</a><br /></p>
 		<p><a href="simulation/physics/circuit-construction-kit-ac_en.jar" style="font-size:1.5em;color:#FFFFFF;" rel="external">circuit-construction-kit-ac(JAVA)</a><br /></p>
 		
-		<p><a rel="external" href="webgl-clouds.html" style="font-size:1.5em;color:#326696;">webgl-clouds(HTML5)</a><br /></p>
-		<p><a rel="external" href="crazy.html" style="font-size:1.5em;color:purple;">crazy-tentacles(HTML5)</a><br /></p>
-		<p><a rel="external" href="Demo1.html" style="font-size:1.5em;color:red;">page-preloading(HTML5)</a><br /></p>
-		<p><a rel="external" href="ball.html" style="font-size:1.5em;color:black;">ball-pool(HTML5)</a><br /></p>
-		<p><a rel="external" href="textillate.html" style="font-size:1.5em;color:white;">textillate(HTML5)</a><br /></p>
-		<p><a rel="external" href="shine.html" style="font-size:1.5em;color:grey;">shine(HTML5)</a><br /></p>
-		<p><a rel="external" href="bubble.html" style="font-size:1.5em;color:rgb(0, 153, 255);">Bubbles(Javascript)</a><br /></p>
-		<p><a rel="external" href="loading.html" style="font-size:1.5em;color:rgb(255, 60, 155);">loading(HTML5)</a><br /></p>
-		<p><a rel="external" href="snake.html" style="font-size:1.5em;color:#FFB6C1;">snake(HTML5)</a><br /></p>
-		<p><a rel="external" href="HTML_color.html" style="font-size:1em;color:green;">HTML color</a><br /><br /><br /></p>
+		<p><a rel="external" href="webgl-clouds.html" style="font-size:1.5em;color:#326696;">Webgl Clouds (HTML5)</a><br /></p>
+		<p><a rel="external" href="crazy.html" style="font-size:1.5em;color:purple;">Crazy Tentacles (HTML5)</a><br /></p>
+		<p><a rel="external" href="Demo1.html" style="font-size:1.5em;color:red;">Page Preloading (HTML5)</a><br /></p>
+		<p><a rel="external" href="ball.html" style="font-size:1.5em;color:black;">Ball Pool (HTML5)</a><br /></p>
+		<p><a rel="external" href="textillate.html" style="font-size:1.5em;color:white;">Textillate (HTML5)</a><br /></p>
+		<p><a rel="external" href="shine.html" style="font-size:1.5em;color:grey;">Shine (HTML5)</a><br /></p>
+		<p><a rel="external" href="bubble.html" style="font-size:1.5em;color:rgb(0, 153, 255);">Bubbles (Javascript)</a><br /></p>
+		<p><a rel="external" href="loading.html" style="font-size:1.5em;color:rgb(255, 60, 155);">Loading (HTML5)</a><br /></p>
+		<p><a rel="external" href="snake.html" style="font-size:1.5em;color:#FFB6C1;">Snake (HTML5)</a><br /></p>
+		<p><a rel="external" href="HTML_color.html" style="font-size:1em;color:green;">HTML Colour</a><br /><br /><br /></p>
 		<!--Function Link Ending-->
 		<!--Personal Info-->
 		<p style="font-size:2em;color:grey;"><i>------Contact------</i><br /></p>
